<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_option_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#599468"
        android:fontFamily="@font/pretendard_bold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/pay_tv_ttitle"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/pretendard_semibold"
        android:gravity="center"
        android:text="@string/pay_tv_sub_ttile"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/iv_card_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:src="@drawable/ic_pay_card" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_total_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/pretendard_semibold"
            android:paddingStart="5dp"
            android:text="@string/pay_tv_total_price"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="100,000"
            android:textColor="@color/semantic_red_500"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/pay_total_one"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_pay_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/pretendard_semibold"
            android:paddingStart="5dp"
            android:text="@string/pay_tv_pay_month"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_pay_once"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/pay_tv_pay_once"
            android:textColor="@color/semantic_red_500"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_card_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/pretendard_semibold"
            android:paddingStart="5dp"
            android:text="@string/pay_tv_card_info"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/pay_tv_card_number"
            android:textColor="@color/semantic_red_500"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:background="@color/semantic_red_500"
            android:fontFamily="@font/pretendard_semibold"
            android:padding="20dp"
            android:text="@string/pay_btn_cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_approve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grayscales_700"
            android:fontFamily="@font/pretendard_semibold"
            android:padding="20dp"
            android:text="@string/pay_btn_approve"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
</layout>