<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_option_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#599468"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cash_tv_pay_cash"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/cash_tv_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:src="@drawable/ic_cash" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_total_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:text="@string/pay_tv_total_price"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/semantic_red_500"
                android:textSize="20sp"
                tools:text="10,000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:text="@string/pay_total_one"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_user_price_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:text="@string/cash_will_pay"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/tv_user_price"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:textColor="@color/semantic_red_500"
                android:textSize="20sp"
                tools:text="2,000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:text="@string/pay_total_one"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_remain_price_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:paddingStart="5dp"
                android:text="@string/cash_remain_pay"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_remain_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/semantic_red_500"
                android:textSize="20sp"
                tools:text="8,000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:textStyle="bold"
                android:text="@string/pay_total_one"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:background="@color/semantic_red_500"
                android:padding="20dp"
                android:text="@string/pay_btn_cancel"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_approve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grayscales_700"
                android:padding="20dp"
                android:text="@string/cash_btn_pay"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</layout>