<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".HomeActivity">

        <TextView
            android:id="@+id/tv_option_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#599468"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/method_tv_title"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingVertical="10dp"
            android:text="@string/method_select_method"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_cash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:layout_weight="1"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/shape_transparent_fill_white_line_20_rect"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="22dp">

                <ImageView
                    android:id="@+id/iv_store"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="17dp"
                    android:src="@drawable/ic_cash" />

                <TextView
                    android:id="@+id/tv_store"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_method_tv_cash"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:layout_weight="1"
                android:layout_marginEnd="25dp"
                android:background="@drawable/shape_transparent_fill_white_line_20_rect"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/iv_take_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_card" />

                <TextView
                    android:id="@+id/tv_take_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_method_tv_card"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>
