<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#036635"
        android:orientation="vertical"
        tools:context=".HomeActivity">

        <ImageView
            android:id="@+id/iv_home_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_home_event" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingVertical="10dp"
            android:text="@string/home_tv_select_method"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_store"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:layout_weight="1"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/shape_transparent_fill_white_line_20_rect"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="22dp">

                <ImageView
                    android:id="@+id/iv_store"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="17dp"
                    android:src="@drawable/ic_home_store" />

                <TextView
                    android:id="@+id/tv_store"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_tv_store"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_take_out"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:layout_weight="1"
                android:layout_marginEnd="25dp"
                android:background="@drawable/shape_transparent_fill_white_line_20_rect"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/iv_take_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_home_takeout" />

                <TextView
                    android:id="@+id/tv_take_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_tv_take_out"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/home_tv_warning"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="11sp" />

    </LinearLayout>
</layout>
